--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <script src="dist/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
