--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:description" content="How fast can you tick checkboxes?">
     <meta name="twitter:image:src" content="">
 
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <script src="dist/index.js"></script>
